--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -13,8 +13,8 @@ html, body{
     font-smoothing: antialiased !important;
     font-feature-settings: normal !important;
     font-variant:normal !important;
-    background: $white;
-    color: $text-color-primary;
+    background: $secondary-color;
+    color: $text-color;
     font-size: $font-size-base + 2;
 }
 .icon {
@@ -32,18 +32,18 @@ html, body{
 }
 
 h1{
-  color: $text-color-primary;
+  color: $white;
   font-size: 2rem;
   line-height: 1.3;
 }
 
 h2{
-  color: $text-color-primary;
+  color: $white;
   font-size: 1.25rem;
 }
 
 h3{
-  color: $text-color-primary;
+  color: $white;
   font-size: 1rem;
 }
 
@@ -53,6 +53,10 @@ p{
 
 .text-secondary{
   color: $secondary-color;
+}
+
+.cf{ 
+  font-family: 'cryptofont';
 }
 
 .vw-100 { width: 100vw; }
@@ -109,108 +113,218 @@ main{
 }
 
 .ant-input{
-  height: 45px;
-  line-height: 45px;
+  height: 41px;
+  line-height: 41px;
   border-radius: $border-radius-base;
+  color: #000;
+  border: 1px solid $white;
+  &.ant-input-sm{
+    height: 33px;
+    line-height: 33px;
+    font-size: $font-size-base - 2; 
+  }
   &.ant-input-lg{
-    height: 52px;
-    line-height: 52px;
+    height: 49px;
+    line-height: 49px;
+    font-size: $font-size-base;
   }
   &:hover, &:focus{
     box-shadow: none;
-    border-color: $input-light-grey-border;
+    border-color: $primary-color;
   }
   &.ant-input-secondary{
-    background: $background-secondary;
+    background: $secondary-color;
     &:hover, &:focus{
       box-shadow: none;
-      border-color: $input-light-grey-border;
+      border-color: rgba($primary-color, 0.5);
     }
   }
 }
 
+.ant-input-secondary{
+  background: $secondary-color;
+  color: $white;
+  input{
+    background: none;
+    color: $white;
+  }
+  &:hover, &:focus{
+    box-shadow: none;
+    border-color: rgba($primary-color, 0.5);
+  }
+}
+
 .ant-select-item-option-active:not(.ant-select-item-option-disabled){
-  background: rgba($background-primary, 0.7);
+  background: rgba($primary-color, 0.7);
 }
 
 .ant-select{
-  &.aut-search{
-    .ant-select-selector{
-      padding: 0 !important;
-      &:hover, &:focus{
-        box-shadow: none !important;
-        border-color: $input-light-grey-border !important;
+  color: #000;
+  .ant-select-selector{
+    height: 41px !important;
+    .ant-select-selection-item{
+      height: 100% !important;
+      i{
+        margin-right: 5px;
+        font-size: $font-size-base + 4;
       }
-      .ant-select-selection-search{
-        .ant-input-group-addon{
-          position: absolute;
-          z-index: 1;
-          left: 0;          
+      input{
+        height: 100% !important;
+      }
+    }
+    &:hover, &:focus{
+      box-shadow: none !important;
+    }
+    .ant-select-selection-search{
+      .ant-input-group-addon{
+        position: absolute;
+        z-index: 1;
+        left: 0;          
+        height: 100%;
+        .ant-btn{
+          background: $secondary-color;
+          border: 0;
+          padding: 0;
           height: 100%;
-          .ant-btn{
-            background: $background-secondary;
-            border: 0;
-            padding: 0;
-            height: 100%;
-            border-radius: 10px;
-            width: 44px;
-            .anticon-search{
-              font-size: 24px;
-              color: #929292;
-            }
+          border-radius: 10px;
+          width: 44px;
+          .anticon-search{
+            font-size: 24px;
           }
         }
-        input{
-          height: 44px;
-          line-height: 44px;
-          background: $background-secondary;
-          border-radius: $border-radius-base;
-          border: 0 !important;
-          padding-left: 40px;
-          box-shadow: none !important;
-          text-align: right;
-          padding-right: 20px;
-        }
+      }
+      input{
+        height: 44px;
+        line-height: 44px;
+        background: $secondary-color;
+        border-radius: $border-radius-base;
+        border: 0 !important;
+        padding-left: 40px;
+        box-shadow: none !important;
+        text-align: right;
+        padding-right: 20px;
+      }
+    }
+  }
+  &.bet-select{
+    .ant-select-selection-item{
+      display: flex;
+      align-items: center;
+      .options-betinner{
+        display: flex;
+        align-items: center;
+        width: 100%;
       }
     }
   }
   &.large{
     .ant-select-selector{
-      padding: 0 !important;
-      height: 52px !important;
-      line-height: 52px !important;
+      height: 49px !important;
+      line-height: 49px !important;
       .ant-select-selection-search{
         left: 0;
         right: 0;
-        height: 50px !important;
-        line-height: 50px !important;
+        height: 49px !important;
+        line-height: 49px !important;
         input{
-          height: 50px !important;
-          line-height: 50px !important;
+          height: 47px !important;
+          line-height: 47px !important;
         }
       }
+      .ant-select-selection-placeholder{
+        line-height: 47px;
+      }
       .ant-select-selection-item{
-        font-size: $font-size-base + 3;
-        text-transform: uppercase;
-        line-height: 50px;
-        padding-left: 20px;
-        font-weight: 600;
-        letter-spacing: 2px;
+        font-size: $font-size-base !important;
+        line-height: 49px;
         color: $text-color-secondary;
+        i{
+          margin-right: 12px;
+          font-size: $font-size-base + 6 !important;
+        }
       }
     }
   }
-  &.ant-select-secondary{
+  &.small{
     .ant-select-selector{
-      background: $background-secondary;
+      height: 33px !important;
+    }
+  }
+  &.ant-select-secondary{
+    &.ant-select-open{
+      .ant-select-selector{
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+    }
+    .ant-select-selector{
+      background: $secondary-color;
+      .ant-select-selection-item{
+        color: $white;
+        font-size: $font-size-base - 2;
+        i{
+          font-size: $font-size-base - 2;
+          margin-right: 8px;
+        }
+      }
+    }
+    .ant-select-arrow{
+      color: $white;
     }
   }
 }
 
 .ant-select-dropdown{
   .ant-select-item{
+    .ant-select-item-option-content{
+        i{
+          margin-right: 5px;
+        }
+      }
     &.ant-select-item-option-selected{
-      background: $background-primary;
+      background: $primary-color;
+      color: $text-color;
+    }
+  }
+  &.withwhite-bg{
+    .ant-select-item{
+      .ant-select-item-option-content{
+        color: $black;
+      }
+      &.ant-select-item-option-selected{
+        background: $primary-color;
+        color: $text-color;
+        .ant-select-item-option-content{
+          color: $text-color;
+        }
+      }
+    }
+  }
+  &.withdark-bg{
+    background: $secondary-color;
+    border: 1px solid $primary-color;
+    padding: 0;
+    border-radius: 0;
+    border-top: 0;
+    .ant-select-item{
+      border-top: 1px solid $primary-color;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      .ant-select-item-option-content{
+        color: $white;
+        .options-betinner{
+          display: flex;
+          align-items: center;
+          width: 100%;
+        }
+      }
+      &.ant-select-item-option-selected{
+        background: $primary-color;
+        color: $text-color;
+        .ant-select-item-option-content{
+          color: $text-color;
+        }
+      }
     }
   }
 }
@@ -230,11 +344,47 @@ main{
 }
 .ant-form-item-control{
   & .ant-input-affix-wrapper{
+    padding: 0;
+    input{
+      padding: 0 6px;
+    }
     & .ant-input-prefix{
+      margin-left: 12px;
+      margin-right: 0;
       & svg{
         fill: $black;
         opacity: 0.3;
       }
+    }
+    & .ant-input-suffix{
+      margin-left: 12px;
+      margin-right: 0;
+      color: rgba($black, 0.5);
+      font-size: $font-size-base;
+      & svg{
+        fill: $black;
+        opacity: 0.3;
+      }
+    }
+  }
+  & .ant-input-affix-wrapper{
+    padding: 0;
+    input{
+      padding: 0 6px 0 10px;
+    }
+    & .ant-input-suffix{
+      margin-left: 0;
+      margin-right: 12px;
+      & svg{
+        fill: $black;
+        opacity: 0.3;
+      }
+    }
+    &.ant-input-secondary{
+       & .ant-input-suffix{
+         color: $white;
+         font-size: $font-size-base + 1;
+       }
     }
   }
 }
@@ -276,19 +426,17 @@ main{
 }  
 
 .ant-btn {
-  background-color: $background-secondary;
-  color: $primary-color;
-  border-color: $background-secondary;
+  background-color: $primary-color;
+  color: $text-color;
+  border-color: $primary-color;
   height: 44px;
   line-height: 100%;
   padding: 0 30px;
-  border-radius: $border-radius-base;
-  text-transform: uppercase;
-  letter-spacing: 3px;
+  border-radius: 100%;
   &:hover, &:focus{
-    background-color: rgba($background-secondary, 0.7);
+    background-color: rgba($primary-color, 0.7);
     color: $primary-color;
-    border-color: rgba($background-secondary, 0.7);
+    border-color: rgba($primary-color, 0.7);
   }
   &.ant-btn-sm{
     height: 34px;
@@ -325,7 +473,7 @@ main{
 
 .ant-btn{
   &:not(.ant-btn-circle){
-    border-radius: $btn-border-radius-base;
+    border-radius: 8px;
   }
   &.ant-btn-icon-only{
     padding: 0;
@@ -504,6 +652,31 @@ main{
         width: 24px;
         height: 24px;
         margin: 0;
+      }
+    }
+  }
+}
+
+.ant-picker-secondary{
+  border: 1px solid $primary-color;
+  background: $secondary-color;
+  height: 49px;
+  line-height: 49px;
+  width: 100%;
+  color: $white;
+  border-radius: $border-radius-base;
+  &:hover, &:focus{
+    border-color:#7756db;
+    box-shadow: none;
+  }
+  .ant-picker-input{
+    input{
+      color: $white;
+    }
+    .ant-picker-suffix{
+      color: $white;
+      .icon{
+        fill: $white;
       }
     }
   }
