--- a/src/assets/scss/plugins/grid/grid.scss
+++ b/src/assets/scss/plugins/grid/grid.scss
@@ -41,7 +41,13 @@ html {
 
 @media (min-width: 1200px) {
 	.container {
-		max-width: 1180px;
+		max-width: 1190px;
+	}
+}
+
+@media (min-width: 1260px) {
+	.container {
+		max-width: 1250px;
 	}
 }
 
