--- a/src/assets/scss/utilities/fonts/fonts.scss
+++ b/src/assets/scss/utilities/fonts/fonts.scss
@@ -1,27 +1,4 @@
 @font-face {
-     font-family: 'SegoeScript';
-     src: url('../../../fonts/SegoeScript.eot');
-     src: url('../../../fonts/SegoeScript.eot?#iefix') format('embedded-opentype'),
-          url('../../../fonts/SegoeScript.svg#SegoeScript') format('svg'),
-          url('../../../fonts/SegoeScript.ttf') format('truetype'),
-          url('../../../fonts/SegoeScript.woff') format('woff'),
-          url('../../../fonts/SegoeScript.woff2') format('woff2');
-     font-weight: 400;
-     font-style: normal;
-}
-@font-face {
-  font-family: 'SegoeScript';
-  src: url('../../../fonts/SegoeScript-Bold.eot');
-  src: url('../../../fonts/SegoeScript-Bold.eot?#iefix') format('embedded-opentype'),
-       url('../../../fonts/SegoeScript-Bold.svg#SegoeScript-Bold') format('svg'),
-       url('../../../fonts/SegoeScript-Bold.ttf') format('truetype'),
-       url('../../../fonts/SegoeScript-Bold.woff') format('woff'),
-       url('../../../fonts/SegoeScript-Bold.woff2') format('woff2');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
     font-family: 'AvertaStd';
     src: url('../../../fonts/AvertaStd-Bold.eot');
     src: url('../../../fonts/AvertaStd-Bold.eot?#iefix') format('embedded-opentype'),
@@ -72,3 +49,19 @@
     font-style: normal;
     font-display: swap;
 }
+
+@font-face {
+    font-family: 'cryptofont';
+    src: url('../../../fonts/cryptofont.eot');
+    src: url('../../../fonts/cryptofont.eot?#iefix') format('embedded-opentype'),
+        url('../../../fonts/cryptofont.woff2') format('woff2'),
+        url('../../../fonts/cryptofont.woff') format('woff'),
+        url('../../../fonts/cryptofont.ttf') format('truetype'),
+        url('../../../fonts/cryptofont.svg#cryptofont') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+// crypto icons
+@import './cryptofont.scss';
