--- a/src/components/bet-details/bet-details.scss
+++ b/src/components/bet-details/bet-details.scss
@@ -2,96 +2,121 @@
 
 .betdetails-wrapper{
     padding-top: 20px;
+    min-height: calc(100vh - 150px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     .betdetails-box{
-        background: $background-primary;
-        padding: 50px 80px 60px;
+        background: $secondary-color;
         width: 100%;
-        max-width: 940px;
+        max-width: 530px;
         margin: auto;
-        border-radius: 30px;
-        @media screen and (max-width:991px) {
-            padding: 50px 40px 40px;
+        @media screen and (max-width:767px) {
+            padding: 0 15px;
         }
-        .betdetails-head{
+        h3{
+            font-size: 1.4rem;
+            font-weight: 600;
+            letter-spacing: 1px;
             text-align: center;
-            margin-bottom: 30px;
-            h1{
-                font-size: 3.2rem;
-                color: $text-color-secondary;
-                margin-bottom: 5px;
-            }
-            h3{
-                text-transform: uppercase;
-                font-size: $font-size-base + 4;
-                font-weight: 600;
-                letter-spacing: 2px;
-                text-align: center;
-                margin-bottom: 4px;
-            }
-            p{
-                font-size: $font-size-base + 6;
-                color: $text-color-primary;
-            }
+            margin-bottom: 15px;
         }
-        .betdetails-bottom{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            @media screen and (max-width:567px) {
-                display: block;
+        .betdetails-boxinner{
+            border:1px solid $primary-color;
+            border-radius: 10px;
+            .betdetails-head{
                 text-align: center;
-            }
-            .center-arrow{
-                .icon{
-                    width: 50px;
-                    fill: rgba($text-color-secondary, 0.5);
+                padding: 20px;
+                h1{
+                    font-size: 2.5rem;
+                    color: $white;
+                    margin-bottom: 0;
+                    line-height: 1;
+                    font-weight: lighter;
+                }
+                p{
+                    font-size: 1.125rem;
+                    color: $white;
+                    margin-bottom: 0;
                 }
             }
-            .betdetails-card{
+            .betdetails-bottom{
                 display: flex;
                 align-items: center;
-                justify-content: center;
-                background: $background-secondary;
-                width: 100%;
-                max-width: 280px;
-                border-radius: 14px;
-                padding: 20px;
+                justify-content: space-between;
+                border-top: 1px solid $primary-color;
+                border-bottom: 1px solid $primary-color;
                 @media screen and (max-width:567px) {
-                    margin: auto;
-                }
-                .betdetails-card-inner{
+                    display: block;
                     text-align: center;
-                    .images{
-                        width: 120px;
-                        height: 120px;
+                }
+                .betdetails-card{
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-start;
+                    background: $secondary-color;
+                    width: 100%;
+                    border-radius: 0;
+                    padding: 20px;
+                    &:nth-child(1){
+                        border-right: 1px solid $primary-color;
+                    }
+                    @media screen and (max-width:767px) {
+                        padding: 10px;
+                    }
+                    @media screen and (max-width:567px) {
+                        margin: auto;
+                    }
+                    .betdetails-card-inner{
                         display: flex;
                         align-items: center;
-                        justify-content: center;
-                        margin-bottom: 15px;
-                        margin-left: auto;
-                        margin-right: auto;
-                        @media screen and (max-width:767px) {
-                            width: 80px;
+                        .images{
+                            width: 100px;
                             height: 80px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            margin-bottom: 15px;
+                            margin-left: auto;
+                            margin-right: auto;
+                            @media screen and (max-width:767px) {
+                                width: 60px;
+                                height: 60px;
+                            }
+                            img{
+                                width: 100%;
+                            }
+                            i{
+                                font-size: 3.8rem;
+                                @media screen and (max-width:767px) {
+                                    font-size: 2.8rem;
+                                }
+                            }
                         }
-                        img{
-                            width: 100%;
+                        .right{
+                            text-align: left;
+                            p{
+                                margin-bottom: 0;
+                                font-size: $font-size-base + 5;
+                                color: $white;
+                            }
+                            small{
+                                font-size: $font-size-base;
+                            }
                         }
-                    }
-                    p{
-                        margin-bottom: 5px;
-                        font-size: $font-size-base + 5;
-                        color: $text-color-primary;
                     }
                 }
             }
-        }
-        .betdetails-section{
-            text-align: center;
-            padding-top: 40px;
-            P{
-                font-size: $font-size-base + 4;
-                margin-bottom: 10px;
+            .betdetails-action{
+                text-align: center;
+                padding: 20px 10px 30px;
+                .ant-btn{
+                    max-width: 260px;
+                }
+                P{
+                    font-size: $font-size-base + 4;
+                    margin-bottom: 12px;
+                }
             }
         }
     }
