--- a/src/components/bet-list/bet-list.scss
+++ b/src/components/bet-list/bet-list.scss
@@ -4,9 +4,27 @@
     padding-top: 30px;
     .bet-list-upper{
         h3{
-            font-size: $font-size-base + 4;
+            font-size: 1.5rem;
             letter-spacing: 2px;
             font-weight: 600;
+            margin-bottom: 0;
+        }
+        .sort-select{
+            width: 100px;
+            font-size: $font-size-base + 1;
+        }
+    }
+    .list-search{
+        padding-top: 55px;
+        @media screen and (max-width:767px) {
+            padding-top: 0;
+            padding-bottom: 30px;
+        }
+        .ant-btn{
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: space-between;
+            align-items: center;
         }
     }
     .bets-listscroll{
@@ -16,66 +34,18 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-gap: 25px;
-        @media screen and (max-width:991px) {
+        @media screen and (max-width:1100px) {
             grid-template-columns: repeat(3, 1fr);
             grid-gap: 20px;
         }
-        @media screen and (max-width:767px) {
+        @media screen and (max-width:991px) {
             grid-template-columns: repeat(2, 1fr);
         }
-        a{
-            color: $text-color-secondary;
+        @media screen and (max-width:767px) {
+            padding-bottom: 15px;
         }
-        .bat-box{
-            background: $background-primary;
-            padding: 20px;
-            border-radius: 20px;
-            cursor: pointer;
-            @media screen and (max-width:576px) {
-                padding:15px 10px;
-            }
-            .box-upper{
-                display: flex;
-                .assets-coloum{
-                    width: 100%;
-                    text-align: center;
-                    p{
-                        margin-bottom: 0;
-                        color: $text-color-primary;
-                    }
-                    .icons{
-                        width: 50px;
-                        height: 50px;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        margin: auto auto 8px auto;
-                        transition: all 0.1s;
-                        @media screen and (max-width:576px) {
-                            width: 40px;
-                            height: 40px;
-                        }
-                        img{
-                            width: 100%;
-                        }
-                    }
-                }
-            }
-            &:hover{
-                box-shadow: -2px 4px 1px rgba(0,0,0,0.1);
-                .box-upper{
-                    .assets-coloum{
-                        .icons{
-                            transform: scale(1.1);
-                        }
-                    }
-                }
-            }
-            .box-bottom{
-                text-align: center;
-                margin-top: 12px;
-                color: $text-color-secondary;
-            }
+        a{
+            color: $text-color;
         }
     }
 }
