--- a/src/components/create-bet/create-bet.scss
+++ b/src/components/create-bet/create-bet.scss
@@ -1,39 +1,20 @@
 @import '../../assets/scss/variables.scss';
 
 .createbet-wrapper{
-    padding-top: 20px;
-    .createbet-box{
-        background: $background-primary;
-        padding: 50px 80px 60px;
+    min-height: calc(100vh - 150px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .createbet-box{ 
+        max-width: 280px;
         width: 100%;
-        max-width: 940px;
         margin: auto;
-        border-radius: 30px;
-        @media screen and (max-width:991px) {
-            padding: 50px 30px 40px;
-        }
-        h3{
-            text-transform: uppercase;
-            font-size: $font-size-base + 4;
-            font-weight: 600;
-            letter-spacing: 2px;
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-        .createbet-form{
-            margin-top: 20px;
-            .createbet-form-row{
-                align-items: center;
-                margin-top: 16px;
-                margin-bottom: 16px;
-                .left-label{
-                    align-items: center;
-                    display: flex;
-                    label{
-                        font-size: $font-size-base + 4;
-                        color: $text-color-secondary;
-                    }
-                }
+        .createbet-inner{
+            h3{
+                font-size: 1.5rem;
+                font-weight: 600;
+                text-align: center;
+                margin-bottom: 20px;
             }
         }
     }
