--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,97 +1,208 @@
 @import '../../assets/scss/variables.scss';
 
-.home-section{
-    padding-top: 30px;
-    min-height: calc(100vh - 85px);
-    .home-upper{
-        border-bottom: 2px solid $border-color-base;
-        padding-bottom: 40px;
-        margin-bottom: 40px;
+.bat-box{
+    background: $secondary-color;
+    border-radius: 8px;
+    border: 1px solid $primary-color;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    transition: all 0.1s;
+    position: relative;
+    .relatives-icon{
+        position: absolute;
+        right: -60%;
+        fill: rgba($primary-color, 0.5);
+        width: 150px;
+        opacity: 0.2;
+        transition: all 0.2s;
+        transform: rotate(90deg);
     }
-    .bat-lists{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 25px;
-        @media screen and (max-width:767px) {
-            grid-template-columns: repeat(2, 1fr);
-            grid-gap: 20px;
+    &:hover{
+        border-color: rgba($primary-color, 0.8);
+        .box-bottom{
+            background: rgba($primary-color, 0.8);
         }
-        .bat-box{
-            background: $background-primary;
-            padding: 20px;
-            border-radius: 20px;
-            @media screen and (max-width:575px) {
-                padding: 12px;
+        .relatives-icon{
+            right: -25%;
+            transform: rotate(-15deg);
+        }
+    }
+    .box-upper{
+        display: flex;
+        padding: 20px 10px;
+        .assets-coloum{
+            width: 100%;
+            text-align: center;
+            p{
+                margin-bottom: 0;
+                font-size: $font-size-base;
             }
-            .box-upper{
+            .icons{
+                width: 50px;
+                height: 50px;
                 display: flex;
-                .assets-coloum{
+                align-items: center;
+                justify-content: center;
+                margin: auto auto 2px auto;
+                font-size: 2rem;
+                @media screen and (max-width:575px) {
+                    width: 40px;
+                    height: 40px;
+                }
+                img{
                     width: 100%;
-                    text-align: center;
-                    p{
-                        margin-bottom: 0;
-                    }
-                    .icons{
-                        width: 50px;
-                        height: 50px;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        margin: auto auto 8px auto;
-                        @media screen and (max-width:575px) {
-                            width: 40px;
-                            height: 40px;
-                        }
-                        img{
-                            width: 100%;
-                        }
+                }
+            }
+        }
+    }
+    .box-bottom{
+        text-align: center;
+        margin-top: auto;
+        color: $text-color;
+        background: $primary-color;
+        font-size: 0.9rem;
+        padding: 5px 5px;
+    }
+}
+
+.home-section{
+    height: calc(100vh - 63px);
+    display: flex;
+    flex-direction: column;
+    .home-upper{
+        .home-left{
+            padding-top: 4.5rem;
+            border-right: 1px solid $primary-color;
+            padding-right: 4.5rem;
+            min-height: calc(100vh - 215px);
+            padding-bottom: 30px;
+            @media screen and (max-width:991px) {
+                min-height: auto;
+                padding-right: 15px;
+                border: 0;
+                padding-top: 20px;
+            }
+            .bat-lists{
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                grid-gap: 25px;
+                @media screen and (max-width:767px) {
+                    grid-template-columns: repeat(2, 1fr);
+                    grid-gap: 20px;
+                }
+            }   
+        }
+        .home-right{
+            padding-top: 4.5rem;
+            padding-left: 2.8rem;
+            overflow: hidden;
+            padding-bottom: 30px;
+            @media screen and (max-width:991px) {
+                padding-top: 1rem;
+                padding-left: 15px;
+            }
+            .back-icon{
+                position: absolute;
+                z-index: 0;
+                width: 150%;
+                left: -75%;
+                fill: rgba($white, 0.05);
+                height: 400px;
+                top: 50px;
+            }
+            .right-inner{
+                position: relative;
+                z-index: 1;
+                h1{
+                    font-weight: 600;
+                    font: 1.8rem;
+                    color: $primary-color;
+                }
+                .create-bet-btn{
+                    margin-top: 30px;
+                    .ant-btn{
+                        border-radius: 4px;
+                        padding: 0 2.2rem;
                     }
                 }
             }
-            .box-bottom{
+        }
+    }
+    .home-search-bet{
+        background: $primary-color;
+        padding: 30px 15px;
+        margin-top: auto;
+        h2{
+            color: $text-color;
+            font-weight: 600;
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+        .searchbet-wrape{
+            display: flex;
+            align-items: center;
+            width: 100%;
+            @media screen and (max-width:767px) {
+                display: block;
                 text-align: center;
-                margin-top: 12px;
-                color: $text-color-secondary;
+                justify-content: center;
+                & > * {
+                    margin-bottom: 20px;
+                }
+            }
+            .ant-form-item{
+                @media screen and (max-width:767px) {
+                    margin-right: 0;
+                }
+            }
+            .bet1{
+                width: 250px;
+                @media screen and (max-width:767px) {
+                    width: 100%;
+                }
+            }
+            .bet-icon{
+                width: 45px;
+                height: 45px;
+                display: flex;
+                align-items: center;
+                @media screen and (max-width:767px) {
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+                .icon{
+                    fill: $text-color;
+                    width: 30px;
+                }
+            }
+            .bet2{
+                width: 250px;
+                @media screen and (max-width:767px) {
+                    width: 100%;
+                }
+            }
+            .bet-amount{
+                width: 120px;
+                @media screen and (max-width:767px) {
+                    width: 100%;
+                }
+            }
+            .ant-btn{
+                font-size: $font-size-base + 3;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                @media screen and (max-width:767px) {
+                    width: 100%;
+                }
+                .anticon {
+                    font-size: 1.4rem;
+                }
             }
         }
     }
-    .home-left-bttom{
-        h4{
-            font-weight: 600;
-            letter-spacing: 2px;
-            font-size: $font-size-base + 2;
-        }
-        .bet-amount{
-            text-align: center;
-            letter-spacing: 2px;
-        }
-    }
-    .home-right{
-        background: $background-primary;
-        height: 100%;
-        position: absolute;
-        width: 33vw;
-        border-radius: 40px 0 0 40px;
-        display: flex;
-        flex-direction: column;
-        padding: 40px 40px;
-        right: -9vw;
-        @media screen and (min-width:1450px) {
-            width: 100%;
-            right: -15%;
-        }
-        @media screen and (max-width:991px) {
-            position: inherit;
-            width: 100%;
-            right: 0;
-            border-radius: 20px;
-        }
-        .create-bet-btn{
-            margin-top: auto;
-            max-width: 220px;
-            width: 100%;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    }
 }
+
+
